- follow ide advices - clean up